[package]
name = "raylib-rs-lowres-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "2d_template"
path = "src/2d_template/main.rs"

[[bin]]
name = "3d_template"
path = "src/3d_template/main.rs"

[[bin]]
name = "2d_template_standard_res"
path = "src/2d_template_standard_res/main.rs"

[[bin]]
name = "2d_with_egui"
path = "src/2d_with_egui/main.rs"


[dependencies]
egui_glow = { version = "0.31", default-features = false }
raylib = "5.5.1"
glow = "0.16"
egui = "0.31"
glam = "0.30"
